Fixed menu z-index

--- a/styles/header.css
+++ b/styles/header.css
@@ -24,6 +24,7 @@
     position: relative;
     transition: opacity 250ms ease-in,
                 transform 250ms ease-in;
+    z-index: 999;
 }
 
 .header__item:not(:last-child) {
